--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 
 </head>
 <STYLE>
+   body,tr{
+    background-color:  #F7FFF7 ;
+   }
   h2 {
     text-align: center;
   }
@@ -36,6 +39,7 @@
       </big>
     </b>
   </p>
+  <center>
   <table CLASS="CENTER" width="600" bgcolor="black">
     <h3>List of marks obtained</h3>
 
@@ -95,11 +99,12 @@
       <td>O</td>
     </tr>
   </table>
-  <A HREF="new.html">
+  <A HREF="asubs.html">
     <h5>ASUBS RESULT</h5>
   </A>
 
   <p><i>Made with <b>love<3< /b>HTML</i></p>
+    <footer>THIS IS FOR EDUCATIONAL PURPOSE ONLY</footer></center>
 </boby>
 
 </html>
